--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,7 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="CrunchifySpringMVCTutorial"/>
         <property name="java-output-path" value="/CrunchifySpringMVCTutorial/build/classes"/>
+        <property name="context-root" value="beer-blog-hiccup"/>
     </wb-module>
 </project-modules>
